<resources>
    <string name="app_name">A岛颜文字</string>

    <string name="rqsttitle">需要权限Σ( ﾟдﾟ)</string>

    <string name="ovlyrqsttext">请设置允许在其他应用的上层显示(=ﾟωﾟ)=</string>

    <string name="acsblyrqsttext">请设置辅助功能(=ﾟωﾟ)=</string>

    <string name="acsblypmttext">赋予权限吧ﾟ ∀ﾟ)ノ</string>

    <string name="acsblyrfstext">取消权限吧ﾟ ∀ﾟ)ノ</string>

    <string name="rootpmstext">获☆取☆root☆大☆成☆功</string>

    <string name="rootrfstext">获☆取☆root☆大☆失☆败</string>

    <string name="rqstyes">前去设置(＾o＾)ﾉ</string>

    <string name="rqstno">不设咋地(╬ﾟдﾟ)</string>

    <string name="rqstrfstoast">那就算了吧( ´_ゝ`)</string>

    <string name="nonvgn">别再点人家啦(〃∀〃)</string>

    <string name="servicesetting">后台</string>

    <string name="brife">(σﾟ∀ﾟ)σ\nPowered by momodupi</string>

    <string name="wmsetting">悬浮窗</string>

    <string name="navsetting">导航栏</string>

    <string name="recsetting">通话录音</string>

    <string name="transsetting">透明度</string>

    <string name="magsetting">磁吸模式</string>

    <string name="rootsetting">root模式</string>

    <string name="gstsetting">手势设置</string>

    <string-array name="gstlist">
        <item>点击</item>
        <item>左滑</item>
        <item>右滑</item>
        <item>上滑</item>
        <item>下滑</item>
    </string-array>

    <string-array name="gstfunclist">
        <item>A岛颜文字</item>
        <item>返回上一级菜单</item>
        <item>返回主页</item>
        <item>显示最近应用</item>
        <item>下拉通知栏</item>
        <item>快捷设置</item>
        <item>电源菜单</item>
        <item>无</item>
    </string-array>

    <string name="noapp">无应用支持</string>

    <string name="error">error</string>

    <string name="accdescp">使用A岛颜文字可以模拟导航栏操作(ゝ∀･)</string>

    <string-array name="kaomoji">
        <item>|∀ﾟ</item>
        <item>(´ﾟДﾟ`)</item>
        <item>(;´Д`)</item>
        <item>(｀･ω･)</item>
        <item>(=ﾟωﾟ)=</item>
        <item>| ω・´)</item>
        <item>|-` )</item>
        <item>|д` )</item>
        <item>|ー` )</item>
        <item>|∀` )</item>
        <item>(つд⊂)</item>
        <item>(ﾟДﾟ≡ﾟДﾟ)</item>
        <item>(＾o＾)ﾉ</item>
        <item>(|||ﾟДﾟ)</item>
        <item>( ﾟ∀ﾟ)</item>
        <item>( ´∀`)</item>
        <item>(*´∀`)</item>
        <item>(*ﾟ∇ﾟ)</item>
        <item>(*ﾟーﾟ)</item>
        <item>(　ﾟ 3ﾟ)</item>
        <item>( ´ー`)</item>
        <item>( ・_ゝ・)</item>
        <item>( ´_ゝ`)</item>
        <item>(*´д`)</item>
        <item>(・ー・)</item>
        <item>(・∀・)</item>
        <item>(ゝ∀･)</item>
        <item>(〃∀〃)</item>
        <item>(*ﾟ∀ﾟ*)</item>
        <item>( ﾟ∀。)</item>
        <item>( `д´)</item>
        <item>(`ε´ )</item>
        <item>(`ヮ´ )</item>
        <item>σ`∀´)</item>
        <item> ﾟ∀ﾟ)σ</item>
        <item>ﾟ ∀ﾟ)ノ</item>
        <item>(╬ﾟдﾟ)</item>
        <item>(|||ﾟдﾟ)</item>
        <item>( ﾟдﾟ)</item>
        <item>Σ( ﾟдﾟ)</item>
        <item>( ;ﾟдﾟ)</item>
        <item>( ;´д`)</item>
        <item>(　д ) ﾟ ﾟ</item>
        <item>( ☉д⊙)</item>
        <item>(((　ﾟдﾟ)))</item>
        <item>( ` ・´)</item>
        <item>( ´д`)</item>
        <item>( -д-)</item>
        <item>(>д&lt;)</item>
        <item>ﾟ( ﾉд`ﾟ)</item>
        <item>( TдT)</item>
        <item>(￣∇￣)</item>
        <item>(￣3￣)</item>
        <item>(￣ｰ￣)</item>
        <item>(￣ . ￣)</item>
        <item>(￣皿￣)</item>
        <item>(￣艸￣)</item>
        <item>(￣︿￣)</item>
        <item>(￣︶￣)</item>
        <item>ヾ(´ωﾟ｀)</item>
        <item>(*´ω`*)</item>
        <item>(・ω・)</item>
        <item>( ´・ω)</item>
        <item>(｀・ω)</item>
        <item>(´・ω・`)</item>
        <item>(`・ω・´)</item>
        <item>( `_っ´)</item>
        <item>( `ー´)</item>
        <item>( ´_っ`)</item>
        <item>( ´ρ`)</item>
        <item>( ﾟωﾟ)</item>
        <item>(oﾟωﾟo)</item>
        <item>(　^ω^)</item>
        <item>(｡◕∀◕｡)</item>
        <item>/( ◕‿‿◕ )\\</item>
        <item>ヾ(´ε`ヾ)</item>
        <item>(ノﾟ∀ﾟ)ノ</item>
        <item>(σﾟдﾟ)σ</item>
        <item>(σﾟ∀ﾟ)σ</item>
        <item>|дﾟ )</item>
        <item>┃電柱┃</item>
        <item>ﾟ(つд`ﾟ)</item>
        <item>ﾟÅﾟ )　</item>
        <item>⊂彡☆))д`)</item>
        <item>⊂彡☆))д´)</item>
        <item>⊂彡☆))∀`)</item>
        <item>(´∀((☆ミつ</item>
    </string-array>

</resources>
